src/objects/Message_Template__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Button__c</fullName>
        <label>Button</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Response__c</fullName>
        <label>Error Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_API_Name__c</fullName>
        <label>Template API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatsApp_Template_ID__c</fullName>
        <label>WhatsApp Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Message Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Body__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MT-{000000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>